# WaylandConnect

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  FIREWALL_RULES.md  LICENSE  Makefile  README.md  analysis_draft.md  install.sh  optimize_images.sh  simulate_multi_pointer.py  uninstall.sh
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  feedback.md
.github/workflows/: release.yml
apps/daemon/: Cargo.toml
apps/daemon/src/: main.rs
capture/: Cargo.toml
capture/src/: lib.rs  wayland.rs
codecs/: Cargo.toml
codecs/src/: dummy.rs  lib.rs
common/: Cargo.toml
common/src/: lib.rs  logging.rs
config/: Cargo.toml
config/src/: lib.rs  loader.rs  schema.rs
core/: Cargo.toml
core/src/: constants.rs  error.rs  lib.rs  traits.rs  types.rs
docs/: index.html
feedback/: index.html
kwin_script/: metadata.desktop  metadata.json
kwin_script/contents/code/: main.js  main.qml
platform/: Cargo.toml
platform/src/: input.rs  lib.rs
processing/: Cargo.toml
processing/src/: audio.rs  lib.rs  magnifier.rs
rust_backend/: Cargo.toml  devices.json  nodes.txt  pw_dump.json
rust_backend/src/: adapter.rs  app_manager.rs  audio_analyzer.rs  constants.rs  event_handler.rs  list_devices.rs  main.rs  media_manager.rs  pointer_manager.rs  protocol.rs  screen_streamer.rs  server.rs  session_state.rs  tls_utils.rs
transport/: Cargo.toml
transport/src/: lib.rs  protocol.rs  server.rs  tcp.rs
wayland_connect_android/: README.md  analysis_output.txt  analysis_output_2.txt  generate_icons.py  pubspec.yaml  test_autostart.dart
wayland_connect_android/.agent/tasks/: fix_and_autostart.md
wayland_connect_android/android/app/: build.gradle.kts  proguard-rules.pro
wayland_connect_android/android/app/src/main/: AndroidManifest.xml
wayland_connect_android/android/app/src/main/kotlin/com/arthenyx/wayland_connect_app/: MainActivity.kt
wayland_connect_android/android/app/src/profile/: AndroidManifest.xml
wayland_connect_android/lib/: main.dart
wayland_connect_android/lib/l10n/: app_en.arb  app_id.arb  app_localizations.dart  app_localizations_en.dart  app_localizations_id.dart
wayland_connect_android/lib/screens/: app_launcher_screen.dart  button_utils.dart  device_scanner_dialog.dart  disconnect_screen.dart  keyboard_screen.dart  landing_screen.dart  media_screen.dart  pointer_screen.dart  screen_share_screen.dart  settings_screen.dart  touchpad_screen.dart
wayland_connect_android/lib/screens/media/: album_art_view.dart  album_info_view.dart  equalizer_view.dart  media_header.dart  particle_drawing_modal.dart  particle_field.dart  player_controls.dart
wayland_connect_android/lib/utils/: protocol.dart
wayland_connect_android/lib/widgets/: pointer_painter.dart  pointer_shape_painter.dart  pointer_widgets.dart
wayland_connect_android/lib_backup_v1/: main.dart
wayland_connect_android/lib_backup_v1/screens/: keyboard_screen.dart  media_screen.dart  touchpad_screen.dart
wayland_connect_android/lib_backup_v2/: main.dart
wayland_connect_android/lib_backup_v2/screens/: landing_screen.dart  media_screen.dart  touchpad_screen.dart
wayland_connect_android/linux/: CMakeLists.txt
wayland_connect_android/linux/runner/: my_application.cc
wayland_connect_desktop/: devices.json  pubspec.yaml  remove_bg.py
wayland_connect_desktop/assets/images/: app_icon.pbm
wayland_connect_desktop/lib/: main.dart
wayland_connect_desktop/lib/l10n/: app_en.arb  app_id.arb  app_localizations.dart  app_localizations_en.dart  app_localizations_id.dart
wayland_connect_desktop/lib/utils/: protocol.dart
wayland_connect_desktop/linux/: CMakeLists.txt
wayland_connect_desktop/linux/runner/: my_application.cc
wayland_pointer_overlay/: Cargo.toml
wayland_pointer_overlay/src/: capture.rs  main.rs
wayland_share_screen/: Cargo.toml
wayland_share_screen/src/: main.rs
