[workspace]
members = [
    "rust_backend",
    "wayland_pointer_overlay",
    "wayland_share_screen",
    "core",
    "common",
    "config",
    "capture",
    "codecs",
    "transport",
    "processing",
    "platform",
    "apps/daemon"
]
resolver = "2"

[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Maximize optimization impact
panic = "abort"     # Remove unwinding code
strip = true        # Strip symbols from the binary
