[package]
name = "wc_capture"
version = "0.1.0"
edition = "2021"

[dependencies]
wc_core = { path = "../core" }
wc_common = { path = "../common" }
async-trait = "0.1"
anyhow = "1.0"
tracing = "0.1"
bytes = "1.5"
tokio = { version = "1", features = ["sync", "rt", "macros"] }

[target.'cfg(target_os = "linux")'.dependencies]
ashpd = { version = "0.8", features = ["pipewire"] }
pipewire = "0.8"
libspa = "0.8"
