[package]
name = "wayland_connect_backend"
version = "1.0.1.1"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
zbus = "3.14" # Using stable version suitable for DBus signals
futures = "0.3"
log = "0.4"
env_logger = "0.10"
anyhow = "1.0"
async-trait = "0.1.89"
input-linux = "0.7.1"
libc = "0.2.180"
notify-rust = "4.11.7"
tokio-rustls = "0.24"
rustls-pemfile = "1.0"
rcgen = "0.11"
sha2 = "0.10"
dirs = "5.0"
lazy_static = "1.5.0"
cpal = "0.15"
rustfft = "6.1"
image = { version = "0.24", features = ["jpeg"] }
base64 = "0.21"
ashpd = { version = "0.9", features = ["pipewire"] }
pipewire = "0.8"
libspa = "0.8"
rmp-serde = "1.3.1"
wc_processing = { path = "../processing" }
wc_core = { path = "../core" }
