[package]
name = "wc_transport"
version = "0.1.0"
edition = "2021"

[dependencies]
wc_core = { path = "../core" }
wc_common = { path = "../common" }
tokio = { version = "1.0", features = ["full"] }
quinn = "0.10"
rmp-serde = "1.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tracing = "0.1"
async-trait = "0.1"
rcgen = "0.12"
rustls = "0.21"
